# learn_python

./: Makefile  README.md  pyproject.toml  requirements.txt
fluent_python/: README.md
fluent_python/ch1/: notebook.ipynb
fluent_python/ch2/: notebook.ipynb
