[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learn_python"
version = "0.0.1"
dependencies = [
    "jupyter",
    "ruff"
]
requires-python = ">=3.11"
authors = [
    {name = "kasrsf"}
]
description = "Learning python!"
readme = "README.md"
license = {text = "MIT License"}

[tool.ruff]
extend-include = ["*.ipynb"]
